2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: added the show more data when click
	in the icon eye.
	Pending task: #3021813

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_ultimopaquete.php: added code for sort by
	data.
	
	* operation/agentes/estado_monitores.php,
	godmode/agentes/module_manager.php: added the icons and source code for
	order rows of list alerts by columns Module Name, Type, Interval and
	Timestamp.

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: lost in previus commit the change to
	"print_select_groups" the new parameter $id_group, to don't show the group
	with id and children of this group.
	
	* include/functions_db.php: in function "format_array_to_where_clause_sql"
	added to order as array several fields.
	
	* operation/agentes/estado_ultimopaquete.php: added the icons and source
	code for order rows of list alerts by columns Module Name, Type, Interval
	and Timestamp.

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/groups/configure_group.php: fixed to negate the posibility to hang
	the father into childrens or same.
	Fixes: #3032553
	
	* godmode/groups/group_list.php: fixed the delete a group with children, the
	children move to grandparent.

2010-07-21  Raúl Mateos   <raulofpandora@gmail.com>

	* images/pandora_logo_header.png, images/custom_logo/pandora_logo_header.*,
	images/neworkmap/pandora_node.png: Updated images to new logo.

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/alerts_status.php: added the icons and source code for
	order rows of list alerts by columns Disabled, Agent Name, Module Name or
	Template Name.

2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: in function "get_agent_alerts_simple"
	changed the query for added the posibility of sort the rows.
	